prevent status buttons from wrapping

--- a/assets/less/compatibility/edd-fes.less
+++ b/assets/less/compatibility/edd-fes.less
@@ -203,6 +203,10 @@ fieldset.fes-submit {
 	@published-color: #5BCC5B;
 	@pending-color: #fca432;
 
+	.download-status {
+		white-space: nowrap;
+	}
+
 	.published {
 	    background: @published-color;
 		color: #fff;
